# Cyth

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CNAME  Cyth.sln  Cyth.vcxproj  Cyth.vcxproj.filters  LICENSE  Makefile  Makefile.wasm  Makefile_WASM  README.md  class.cy  cyth.js  cyth.wasm  editor.js  for.cy  import.cy  index.html  pascal.cy  sqrt.cy  test.cy  test2.cy  worker.js
editor/: editor.js  index.html  worker.js
extension/: client.js  cyth-0.0.1.vsix  cyth.js  cyth.wasm
input/: class.cy  class_broken.cy  for.cy  pascal.cy  sqrt.cy  test.cy  test2.cy  toni.cy  while.cy
src/: array.h  checker.c  checker.h  codegen.c  codegen.h  expression.h  jit.c  jit.h  lexer.c  lexer.h  main.c  main.h  map.c  map.h  memory.c  memory.h  parser.c  parser.h  printer.c  printer.h  scanner.c  scanner.h  statement.h
test/: _test.js  _test_wasm.js  _test_wasm_web.js  _test_web.js  a.cy  access_template.cy  alloc.cy  any.cy  any_is.cy  any_null.cy  any_null_null.cy  any_overload.cy  argument_error.cy  arguments.cy  array.cy  array_assignment.cy  array_chain.cy  array_class.cy  array_hashmap.cy  array_inference.cy  array_literal.cy  array_multi_class.cy  array_remove.cy  array_reserve.cy  array_shortest_to_char.cy  array_sort.cy  array_square.cy  array_transformation.cy  array_uninferred.cy  assignment.cy  bitwise.cy  boolable.cy  boolable_bug.cy  break_bug.cy  break_bug2.cy  broken.cy  broken3.cy  broken4.cy  broken5.cy  cast.cy  (+129 more)
tests/: _test.js  any.cy  array.cy  array_class.cy  array_hashmap.cy  array_literal.cy  array_shortest_to_char.cy  array_sort.cy  array_square.cy  array_transformation.cy  cast.cy  class.cy  class_initializers.cy  class_recursive.cy  class_sort.cy  class_string.cy  cyclic.cy  empty_body.cy  escape_characters.cy  for.cy  func2.cy  func4.cy  func5.cy  global_local.cy  hashmap.cy  import.cy  level_order_graph.cy  level_order_graph_stack.cy  max_heap.cy  operator_overload.cy  priority_queue.cy  runner.js  split_array.cy  sqrt.cy  string_iterate.cy  string_reverse.cy  (+9 more)
(+4 files in other folders)
